Fixed layout issue in table

--- a/public/style.css
+++ b/public/style.css
@@ -215,6 +215,7 @@ table.inquiries td {
 
 table.inquiries th {
   text-align: left;
+  white-space: nowrap;
 }
 
 table.inquiries td:not(:last-child) {
